Added some examples, made design possible for usability

--- a/Frontend/src/index.html
+++ b/Frontend/src/index.html
@@ -10,7 +10,11 @@
   </head>
 
   <body>
-    <app-root></app-root>
+    <app-root>
+      <h1 class="center">
+        Loading...
+      </h1>
+    </app-root>
   </body>
 
 </html>
