Just same as before

--- a/Frontend/src/index.html
+++ b/Frontend/src/index.html
@@ -11,7 +11,7 @@
 
   <body>
     <app-root>
-      <h1 class="center">
+      <h1 class="index_loading_center">
         Loading...
       </h1>
     </app-root>
