--- a/Backend/src/main/webapp/index.html
+++ b/Backend/src/main/webapp/index.html
@@ -4,6 +4,11 @@
 <head>
   <meta charset="utf-8">
   <title>Dashboard</title>
-  <base href="/">
-  <meta name="viewport" content="width=device-width, initial-scale=1"></head>
+
+<body>
+    <h1 class="index_loading_center">
+      Loading...
+    </h1>
+  </body>
 </html>
+
